Fixed typo Added accumulator test