@@ -14,6 +14,7 @@ import ca.gc.aafc.dina.messaging.producer.RabbitMQMessageProducer;
 import ca.gc.aafc.dina.testsupport.PostgresTestContainerInitializer;
 import ca.gc.aafc.dina.testsupport.TransactionTestingHelper;
 
+import java.util.concurrent.TimeUnit;
 import javax.inject.Named;
 import lombok.Getter;
 import lombok.NonNull;
@@ -54,6 +55,9 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
 @SpringBootTest(classes = {TestDinaBaseApp.class, MessageProducingServiceTest.TestConfig.class},
   properties = {
@@ -134,6 +138,31 @@ class MessageProducingServiceTest {
     assertResult(DocumentOperationType.UPDATE, item.getUuid().toString());
   }
 
+
+  @SneakyThrows
+  @Test
+  void testAccumulator() {
+    Item item = Item.builder()
+      .uuid(UUID.randomUUID())
+      .group("CNC")
+      .build();
+    transactionTestingHelper.doInTransaction( ()-> itemService.create(item));
+    listener.getLatch().await();
+    listener.setLatch(new CountDownLatch(2));
+
+    // send 1000 updates, that should generate only 1 message
+    transactionTestingHelper.doInTransaction(() -> {
+        for (int i = 0; i < 1000; i++) {
+          itemService.update(item);
+        }
+        return item;
+      }
+    );
+    boolean got2Records = listener.getLatch().await(2, TimeUnit.SECONDS);
+    assertFalse(got2Records);
+    assertEquals(1, listener.getMessages().size());
+  }
+
   @SneakyThrows
   @Test
   void delete() {
@@ -154,11 +183,11 @@ class MessageProducingServiceTest {
   }
 
   private void assertResult(DocumentOperationType op, String id) throws java.io.IOException {
-    DocumentOperationNotification result = mapResult(listener.getMessages().get(0));
-    Assertions.assertFalse(result.isDryRun());
-    Assertions.assertEquals(op, result.getOperationType());
-    Assertions.assertEquals(id, result.getDocumentId());
-    Assertions.assertEquals("item", result.getDocumentType());
+    DocumentOperationNotification result = mapResult(listener.getMessages().getFirst());
+    assertFalse(result.isDryRun());
+    assertEquals(op, result.getOperationType());
+    assertEquals(id, result.getDocumentId());
+    assertEquals("item", result.getDocumentType());
   }
 
   private static DocumentOperationNotification mapResult(String content) throws java.io.IOException {
@@ -168,7 +197,7 @@ class MessageProducingServiceTest {
   @TestConfiguration
   static class TestConfigTaskScheduler {
     @Bean(name = "event-accumulator-task-scheduler")
-    public ThreadPoolTaskScheduler taskScheduler2() {
+    public ThreadPoolTaskScheduler taskScheduler() {
       ThreadPoolTaskScheduler scheduler = new ThreadPoolTaskScheduler();
       scheduler.setPoolSize(1);
       scheduler.setThreadNamePrefix("eventAccumulatorTaskScheduler-");
